erDiagram
    ADMIN_USERS ||--o{ ANALYTICS_LOGS : "tracks"
    ADMIN_USERS {
        int id PK
        string email UK
        string password_hash
        string display_name
        string role "SuperAdmin | ContentAdmin | Editor | Viewer"
        datetime created_at
        datetime last_login
    }

    MOBILE_USERS ||--o{ ANALYTICS_LOGS : "generates"
    MOBILE_USERS {
        int id PK
        string device_id UK "Anonymous tracking"
        string preferred_lang "vi | en | ko | zh"
        datetime first_opened
        datetime last_synced
    }

    POI ||--o{ AUDIO_CONTENT : "has audio"
    POI ||--o{ POI_IMAGES : "has images"
    POI ||--o{ ANALYTICS_LOGS : "tracked by"
    POI ||--o{ QR_CODES : "linked to"
    POI {
        int id PK
        string name
        text description
        float latitude
        float longitude
        float radius_meters "default 50-200m"
        int priority "1-5"
        bool is_active
        string image_url
        datetime created_at
        datetime updated_at
    }

    AUDIO_CONTENT {
        int id PK
        int poi_id FK
        string language_code "vi | en | ko | zh"
        string audio_file_url
        text tts_script
        int duration_sec
        string source "manual | ai_generated"
        bool is_active
        datetime created_at
        datetime updated_at
    }

    POI_IMAGES {
        int id PK
        int poi_id FK
        string image_url
        string caption
        int display_order
    }

    TOURS ||--|{ TOUR_POI_MAPPING : "contains"
    TOURS {
        int id PK
        string tour_code UK
        string name
        text description
        bool is_active
        datetime created_at
    }

    TOUR_POI_MAPPING {
        int id PK
        int tour_id FK
        int poi_id FK
        int order_index
    }

    QR_CODES {
        int id PK
        int poi_id FK
        string qr_data
        string location_desc "Trạm bus Khánh Hội - Trạm 3"
        datetime created_at
        datetime expires_at
    }

    ANALYTICS_LOGS {
        int id PK
        string user_anon_id
        int poi_id FK
        string event_type "listened | entered | exited"
        datetime event_time
        int duration_seconds
        float latitude
        float longitude
        string trigger_type "gps | qr_scan | manual"
    }

    USER_LOCATION_LOG {
        int id PK
        string user_anon_id
        float latitude
        float longitude
        datetime recorded_at
    }

    SYNC_LOG {
        int id PK
        string device_id
        datetime sync_time
        string sync_type "full | delta"
        int items_count
        bool success
    }
